--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,31 @@ img {
 #section1 {
     position: fixed;
     width: 30%;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
 }
 
-#section1 p {
-    margin-top: .3rem;
+#email-container {
+    background-color: #e9e9e981;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    width: 88%;
+}
+
+#email-icon {
+    background-color: #ffffb5;
+    height: 2.5rem;
+    width: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+#email {
+    margin-left: .5rem;
 }
 
 #section2 {
@@ -122,6 +143,7 @@ hr {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
 }
 
 .plan h3 {
@@ -132,4 +154,77 @@ hr {
     font-size: 17px;
     margin-top: 1rem;
     line-height: 1.45rem;
+}
+
+@media screen and (max-width: 1024px) {
+    body {
+        padding: 4rem
+    }
+
+    main {
+        grid-template-columns: 30% 70%;
+    }
+
+    h2 {
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 912px) {
+    #email-container {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    body {
+        padding: 3rem
+    }
+
+    #email-container {
+        width: 110%;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    body {
+        padding: 1.5rem;
+    }
+
+    main {
+        display: block;
+    }
+
+    #section1 {
+        width: 100%;
+        position: static;
+        align-items: center;
+    }
+
+    #section1 p {
+        text-align: center;
+    }
+
+    #section2 {
+        padding: 0;
+        margin-top: 1.5rem;
+    }
+
+    #email-container {
+        width: 80%;
+    }
+
+    #links a {
+        margin-right: .5rem;
+    }
+
+    #links a:nth-child(3) {
+        margin-top: .5rem;
+    }
+}
+
+@media screen and (max-width: 370px) {
+    #email-container {
+        width: 85%;
+    }
 }
